Added Accelerometer test code

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -2,23 +2,32 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" 
-    android:padding="10dp">
-    
-    <TextView 
+    android:orientation="vertical"
+    android:padding="10dp" >
+
+    <TextView
+        android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textView"
-        android:text="Battery Details"
-        />
-    
-    <ImageView 
+        android:text="Battery Details" />
+
+    <ImageView
+        android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView"
         android:adjustViewBounds="true"
-        android:src="@drawable/ic_launcher"
-        />
-    
+        android:src="@drawable/ic_launcher" />
+
+    <Button
+        android:id="@+id/btnGPSOn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="GPS On" />
+
+    <Button
+        android:id="@+id/btnGPSOff"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="GPS Off" />
 
 </LinearLayout>
